C/include/codata_constants_2014.h

ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_ENERGY_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_FORCE_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_LENGTH_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_MAGNETIZABILITY_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_MASS_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_MOMUM_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_PERMITTIVITY_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_TIME_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_UNIT_OF_VELOCITY_2014;
ADD_IMPORT const struct codata_constant_type AVOGADRO_CONSTANT_2014;
ADD_IMPORT const struct codata_constant_type BOHR_MAGNETON_2014;
ADD_IMPORT const struct codata_constant_type BOHR_MAGNETON_IN_EV_T_2014;
ADD_IMPORT const struct codata_constant_type BOHR_MAGNETON_IN_HZ_T_2014;